--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
     justify-content: center;
     background-color: #54B435;
 
-    position: sticky;
+    position:fixed;
+    width: 200vh;
 }
 .navbutton{
     width: 150px;
@@ -48,6 +49,11 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    position: relative;
+    top: 100px;
+
+    padding-bottom: 100px;
 }
 #banner{
     width: 650px;
@@ -67,4 +73,15 @@ p{
 li{
     font-size: 30px;
     width: 500px;
+}
+.assets{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items:flex-start;
+}
+
+footer{
+    background-color: #54B435;
+    margin: 0px;
 }
